--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express-router": "0.0.1",
     "mysql": "^2.18.1",
     "promise-mysql": "^4.1.3",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "validator": "^12.2.0"
   }
 }
