--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-router": "0.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "promise-mysql": "^4.1.3",
     "sha1": "^1.1.1",
