--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,10 @@
     "react-scripts": "3.4.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^9.8.2",
+    "sweetalert2-react-content": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
