--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-router": "0.0.1",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "path": "^0.12.7",
     "promise-mysql": "^4.1.3",
     "sha1": "^1.1.1",
     "validator": "^12.2.0"
