--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
