--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropdown": "^1.6.4",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
